# libserial

./: CMakeLists.txt  README.md  license.txt
cmake/: LibSerialConfig.cmake.in
example/: CMakeLists.txt
test/: testlib.cpp
